<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView38"
        style="@style/VaultTextDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_buying_ethereum_for"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40000"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView38" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView40"
        style="@style/VaultTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView38"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.011"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView40"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView38" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView41"
        style="@style/VaultTextDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/select_payment_method"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView39" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView41">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_banking" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit_card" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credi_card" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        style="@style/VaultButtonStyle"
        android:layout_marginTop="32dp"
        android:text="@string/proceed_to_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>